# buptsse-2018-study-materials

./: README.md  main.c  test  软件工程大三选课指导及学习资料.docx
C#学习资料/C#实验小组1/: C# 实践总结-原婷婷 .docx  C# 实践总结-苏翼涵.docx  C# 实践总结-谭上鸥 .docx  C#小组实验报告.docx
C#学习资料/C#实验小组2/: 2015211976-张帅-个人报告.docx  2015212040-张昕夏-C#个人报告 .docx  2015212086-刘浩博-C# 个人实践报告 .docx  小组报告.docx  结构设计.docx
C#学习资料/C#实验小组3/: C# PPT.pptx  C# 李银-实践报告.docx  C# 肖逸敏-实践报告.docx  C# 郭一卿-实践报告.docx  c#小组实验报告.docx  c#笔记.docx
C#学习资料/C#实验小组4/: C# 实验报告 .docx  C# 实验报告_ouyang.docx  C#小组实验报告.doc  游戏厅.ppt
C#学习资料/C#实验小组5/: 2016211504-2016212011-田宇 .docx  C#游戏策划.docx  尚宇C# 实验报告 .docx  张俨C# 实验报告 .docx
C#学习资料/C#实验小组6/: C#小组实验策划(第二版).docx  C#小组实验计划书 .docx  Unity3D游戏设计及实现.doc
XMLAndWeb/XML期末/: 2020-2021上半学期XML期末考题.docx
云计算数据中心(双培)/云计算数据中心实验与作业/: 《云计算数据中心》实践指导书 1.docx  云计算实验报告_2018522108_徐龙.docx  云计算数据中心作业1.docx
云计算数据中心(双培)/云计算数据中心期末复习/: 2019-2020云计算数据中心期末试题.docx  2020-2021云计算数据中心期末试题.docx  云计算数据中心.xmind
嵌入式开发/小组源码分析/: uCOS-II源码研读报告v1.0.docx
并行计算/并行计算实验/2014级三个实验/负载均衡/Moore/: AdjacencyTable.cpp  AdjacencyTable.h  CMakeLists.txt  Dijkstra.cpp  Dijkstra.h  Graph.cpp  Graph.h  MPIBase.cpp  MPIBase.h  Moore.cpp  Moore.h  Node.cpp  Node.h  main.cpp
并行计算/并行计算期末/: 2020-2021上半学期并行计算期末试题.docx  卢本捷期末重点口述记录(张艺华记录).docx  并行计算.xmind  并行计算期末考试准备.docx
数值计算/: 数值计算大实验要求.docx  数值计算高分范例（隋小雨）.docx
数据挖掘/数据挖掘实验/: 2014211990-肖逸敏-分类实验.docx  2014211990-肖逸敏-聚类.docx
数据挖掘/数据挖掘期末复习/: 2020-2021数据挖掘期末试题.docx  数据挖掘.xmind  数据挖掘考点整理.doc  整理之后的数据挖掘总结.doc
算法分析与设计/算法小组作业/: 关于二叉树的加密算法.doc
软件需求工程/: 软件需求工程报告.docx
面向对象分析设计/: 第一次OOAD作业.docx
(+1694 files in other folders)
